<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PebbleWatch</string>
    <string name="action_settings">Settings</string>
    <string name="add_button_text">Add</string>
    <string name="edit_button_text">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Add Contact</string>
    <string name="delete_dialog_title">Delete Contact</string>
    <string name="delete_dialog_message">Are you sure you want to delete it?</string>
    <string name="header_text">Pebbleye</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_message_text">Current Message</string>
    <string name="disabilities_text">Disabilities</string>
    <string name="none">None (Healthy)</string>
    <string name="bone_disorders">Bone Disorders</string>
    <string name="bone_fractures">Bone Fractures</string>
    <string name="post_operation">Post Operation</string>
    <string name="old_age">Old Age</string>
    <string name="submit_button_text">Submit</string>
    <string name="submit_dialog_title">Submitted</string>
    <string name="submit_dialog_message">Your changes have been submitted.</string>
    <string name="title_activity_geocoding">GeocodingActivity</string>
    <string name="preference_file_key">com.uofthacks.pebblewatch.PREFERENCE_FILE_KEY</string>
    <string name="preference_file_key_settings">com.uofthacks.pebblewatch.PREFERENCE_FILE_KEY_SETTINGS</string>

</resources>
