<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uofthack.pebblewatch.SettingsActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:id="@+id/emergency_message"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="Emergency Message"
                android:background="@color/white"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                android:paddingLeft="@dimen/small_padding" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/emergency_message"
                android:id="@+id/customize_message"
                android:background="@color/white"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                android:paddingLeft="@dimen/small_padding"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/current_message_text"
                    android:id="@+id/current_message_text"
                    android:layout_marginBottom="@dimen/small_vertical_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/current_message" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/customize_message"
                android:background="@color/white"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                android:paddingLeft="@dimen/small_padding"
                android:id="@+id/disabilities"
                android:layout_marginBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/disabilities_text"
                    android:id="@+id/disabilities_text"
                    android:layout_marginBottom="@dimen/small_vertical_margin" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:id="@+id/none"
                        android:layout_marginBottom="@dimen/small_vertical_margin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bone_disorders"
                        android:id="@+id/bone_disorders"
                        android:layout_marginBottom="@dimen/small_vertical_margin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bone_fractures"
                        android:id="@+id/bone_fractures"
                        android:layout_marginBottom="@dimen/small_vertical_margin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_operation"
                        android:id="@+id/post_operation"
                        android:layout_marginBottom="@dimen/small_vertical_margin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_age"
                        android:id="@+id/old_age"
                        android:layout_marginBottom="@dimen/small_vertical_margin" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:text="@string/submit_button_text"
                android:id="@+id/settings_submit_button"
                style="@style/ButtonTheme"
                android:layout_alignParentBottom="true"
                android:onClick="doSettingsChanged" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>